fixing minor spacing and color

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -71,12 +71,14 @@ body {
   position: fixed;
   bottom: 0;
   width: 100%;
-  height: 60px;
-	padding-top: 10px;
+  height: 27px;
+   padding-top: 5px;
   background-color: #f5f5f5;
 	.container{
 	  padding-left: 10px;
 	  padding-left: 10px;
+	}a{
+	color: black;
 	}
 }
 
