--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -32,6 +32,7 @@ a, a:link{
 	overflow: hidden;
 	color: #7C7D7E;
 	text-transform: uppercase;
+	margin-top: 4%;
 	.row{
 		margin-bottom: 5px;
 		overflow: hidden;
